[gd_scene load_steps=3 format=3 uid="uid://hoorcejsr43n"]

[ext_resource type="Script" uid="uid://d3i8f77tcp705" path="res://Scripts/audio_manager.gd" id="1_4tj6f"]
[ext_resource type="AudioStream" uid="uid://wsedi5l22a5c" path="res://Musics/Sigillum (Demon Version).wav" id="1_sm2tf"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_4tj6f")

[node name="MainPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_sm2tf")
autoplay = true

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="DialoguePlayer" type="AudioStreamPlayer" parent="."]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
